[package]
name = "holonear"
version = "1.0.0"
authors = ["Holonym Foundation <hello@holonym.id>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = "2.1.0"
hex = "0.4.3"
hex-literal = "0.4.1"
near-sdk = "4.1.1"
num-bigint = "0.4.4"
serde = "1.0.195"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
serde_json = "*"
ethers-core = "2.0.12"


[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["sandbox-rs"]
